--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 #mongodb connection string
-MONGODB_URI = mongodb://localhost:27017/Prescripto
+MONGODB_URI = mongodb://localhost:27017/MediSync
 
 #cloudinary credentials
 CLODINARY_NAME = 'dh0kxjqhu'
@@ -7,16 +7,16 @@ CLODINARY_API_KEY = '891843885217296'
 CLODINARY_SECRET_KEY = '7-VCbeng7cYVHYbjIduWG276Hq4'
 
 #admin password and email
-ADMIN_EMAIL = 'admin@prescripto.com'
+ADMIN_EMAIL = 'admin@medisync.com'
 ADMIN_PASSWORD = 'rdx12345678'
 
 
 #jwt secret key
-JWT_SECRET = "prescripto"
+JWT_SECRET = "medisync"
 
 #razorpay credentials
 RAZORPAY_KEY_ID = "rzp_test_XkTUGhlV1Vt9JC"
 RAZORPAY_SECRET_KEY="qpOAwuLRarry1mnB5xVYHXss"
 CURRENCY = "INR" 
 
-Admin="Rohit"
+Admin="Akshay"
